# ai-model-downloader

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Cargo.toml  LICENSE  README.md  deny.toml
.claude/: settings.json
.claude/agents/: architect.md  harness-builder.md  performance-engineer.md  rust-pro.md  rust-reviewer.md  tdd-guide.md
.claude/skills/subagent-driven-development/: SKILL.md
.claude/skills/using-superpowers/references/: gemini-tools.md
.claude/skills/writing-plans/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: buffer_pool.rs  crypto_hash.rs  e2e_download.rs  fragment_planning.rs  hex_encode.rs  write_pipeline.rs
benches/support/: mod.rs
crates/amd-app/: Cargo.toml  tauri.conf.json
crates/amd-app/capabilities/: default.json
crates/amd-app/src/: commands.rs  lib.rs  main.rs  task_store.rs
crates/amd-core/: Cargo.toml
crates/amd-core/src/: config.rs  error.rs  filename.rs  lib.rs  test_harness.rs  traits.rs  types.rs  url_safety.rs
crates/amd-crypto/: Cargo.toml
crates/amd-crypto/src/: cpu.rs  gpu.rs  lib.rs
crates/amd-engine/: Cargo.toml
crates/amd-engine/src/: connection.rs  downloader.rs  fragment.rs  lib.rs  orchestrator.rs
crates/amd-io/: Cargo.toml
crates/amd-io/src/: buffer.rs  iouring.rs  lib.rs  pipeline.rs  storage.rs  tokio_file.rs  winio.rs
crates/amd-p2sp/: Cargo.toml
crates/amd-p2sp/src/: dht.rs  lib.rs  source.rs
crates/amd-protocol/: Cargo.toml
crates/amd-protocol/src/: ftp.rs  http.rs  lib.rs  quic.rs
crates/amd-scheduler/: Cargo.toml
crates/amd-scheduler/src/: download_scheduler.rs  lib.rs  predictor.rs  scheduler.rs
crates/amd-sniffer/: Cargo.toml
crates/amd-sniffer/src/: lib.rs  resources.rs
crates/amd-store/: Cargo.toml
crates/amd-store/src/: kv.rs  lib.rs  recovery.rs  store.rs
crates/qf-app/: Cargo.toml  tauri.conf.json
crates/qf-app/src/: commands.rs  lib.rs  main.rs  task_store.rs
crates/qf-core/: Cargo.toml
crates/qf-core/src/: config.rs  error.rs  event.rs  filename.rs  lib.rs  test_harness.rs  traits.rs  types.rs  url_safety.rs
crates/qf-crypto/: Cargo.toml
crates/qf-crypto/src/: cpu.rs  gpu.rs  lib.rs
crates/qf-engine/: Cargo.toml
crates/qf-engine/src/: connection.rs  downloader.rs  fragment.rs  lib.rs  orchestrator.rs
crates/qf-io/: Cargo.toml
crates/qf-io/src/: buffer.rs  iouring.rs  lib.rs  pipeline.rs  storage.rs  tokio_file.rs  winio.rs
crates/qf-p2sp/: Cargo.toml
crates/qf-p2sp/src/: dht.rs  lib.rs  peer.rs  source.rs
crates/qf-protocol/: Cargo.toml
crates/qf-protocol/src/: ftp.rs  http.rs  lib.rs  quic.rs
crates/qf-scheduler/: Cargo.toml
crates/qf-scheduler/src/: download_scheduler.rs  lib.rs  predictor.rs  scheduler.rs
crates/qf-sniffer/: Cargo.toml
crates/qf-sniffer/src/: capture.rs  filter.rs  lib.rs  resources.rs
crates/qf-store/: Cargo.toml
crates/qf-store/src/: kv.rs  lib.rs  recovery.rs  store.rs
crates/tachyon-app/: Cargo.toml  tauri.conf.json
crates/tachyon-app/capabilities/: default.json
crates/tachyon-app/src/: commands.rs  lib.rs  main.rs  task_store.rs
crates/tachyon-app/src/commands/: config_commands.rs  hub_commands.rs  mod.rs  progress_commands.rs  sniffer_commands.rs  task_commands.rs
crates/tachyon-core/: Cargo.toml
crates/tachyon-core/src/: config.rs  error.rs  filename.rs  lib.rs  rate_limit.rs  test_harness.rs  traits.rs  types.rs  url_safety.rs
crates/tachyon-crypto/: Cargo.toml
crates/tachyon-crypto/src/: cpu.rs  gpu.rs  lib.rs
crates/tachyon-engine/: Cargo.toml
crates/tachyon-engine/proptest-regressions/: fragment.txt
crates/tachyon-engine/src/: circuit_breaker.rs  connection.rs  downloader.rs  fragment.rs  lib.rs  mirror.rs  orchestrator.rs  storage_adapter.rs
crates/tachyon-hub/: Cargo.toml
crates/tachyon-hub/src/: api.rs  lfs.rs  lib.rs  token.rs
crates/tachyon-io/: Cargo.toml
crates/tachyon-io/src/: buffer.rs  iocp.rs  iouring.rs  lib.rs  pipeline.rs  storage.rs  tokio_file.rs  winio.rs
crates/tachyon-io/tests/: iocp_contract.rs
crates/tachyon-p2sp/: Cargo.toml
crates/tachyon-p2sp/src/: dht.rs  lib.rs  peer.rs  source.rs
crates/tachyon-p2sp/src/dht/: kademlia.rs  kbucket.rs  message.rs  mod.rs  node.rs  transport.rs
crates/tachyon-protocol/: Cargo.toml
crates/tachyon-protocol/src/: ftp.rs  http.rs  lib.rs  quic.rs
crates/tachyon-scheduler/: Cargo.toml
crates/tachyon-scheduler/src/: download_scheduler.rs  lib.rs  predictor.rs  scheduler.rs
crates/tachyon-sniffer/: Cargo.toml
crates/tachyon-sniffer/src/: capture.rs  filter.rs  lib.rs  resources.rs
crates/tachyon-store/: Cargo.toml
crates/tachyon-store/src/: lib.rs  recovery.rs  store.rs
docs/superpowers/plans/: 2026-05-28-optimization-phases-1-4.md
docs/superpowers/specs/: 2026-05-28-bug-fix-arch-alignment-design.md  2026-05-28-frontend-refactor-design.md  2026-05-28-optimization-phases-1-4-design.md
docx/: 全面优化计划.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme-bootstrap.ts  types.ts
frontend/src/api/: events.ts  invoke.ts
frontend/src/components/: BatchToolbar.tsx  ChunkMatrix.tsx  CommandPalette.tsx  ContextMenu.tsx  DetailPanel.tsx  DownloadCard.tsx  FragmentGrid.tsx  HFZone.tsx  HistoryPanel.tsx  Layout.tsx  NavItem.tsx  NewTaskModal.tsx  ProgressBar.tsx  SettingsPanel.tsx  Sidebar.tsx  SnifferPanel.tsx  Sparkline.tsx  SpeedChart.tsx  SpeedDashboard.tsx  StateMachine.tsx  StatsDashboard.tsx  StatusBar.tsx  TaskItem.tsx  TaskList.tsx  TitleBar.tsx  ToastContainer.tsx  Toggle.tsx  Topbar.tsx  icons.tsx
frontend/src/hooks/: useTauriEvent.ts
frontend/src/services/: downloadChannel.ts
frontend/src/stores/: downloads.ts  history.ts  selection.ts  settings.ts  sniffer.ts  speedHistory.ts  toast.ts
frontend/src/utils/: format.ts  icons.tsx  stateMachine.ts  styles.ts
src/: lib.rs
tests/: core_stability_recovery.rs  integration_test.rs
tests/common/: mod.rs
(+10 files in other folders)
