[workspace]
resolver = "2"
members = [
    "crates/qf-core",
    "crates/qf-engine",
    "crates/qf-scheduler",
    "crates/qf-io",
    "crates/qf-protocol",
    "crates/qf-sniffer",
    "crates/qf-crypto",
    "crates/qf-p2sp",
    "crates/qf-store",
    "crates/qf-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
thiserror = "2"
anyhow = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# QUIC
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"

# 哈希
blake3 = "1"
sha2 = "0.10"

# GPU
wgpu = "24"

# FTP
suppaftp = { version = "8", features = ["tokio"] }

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = "2"

# 时间与异步
futures = "0.3"
bytes = "1"

# UUID 与时间
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 网络
url = "2"

# 开发依赖
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13"
rstest = "0.22"
tempfile = "3"
tokio-test = "0.4"

[package]
name = "quantum-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuantumFetch 基准测试与集成测试入口"

[dev-dependencies]
criterion = { workspace = true }
qf-core = { path = "crates/qf-core", features = ["test-harness"] }
qf-io = { path = "crates/qf-io" }
qf-engine = { path = "crates/qf-engine" }
qf-crypto = { path = "crates/qf-crypto" }
qf-scheduler = { path = "crates/qf-scheduler" }
qf-sniffer = { path = "crates/qf-sniffer" }
blake3 = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "crypto_hash"
harness = false

[[bench]]
name = "fragment_planning"
harness = false

[[bench]]
name = "hex_encode"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
