[package]
name = "amd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader 核心类型、trait 定义与错误体系"

[features]
test-harness = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true
bytes.workspace = true
futures.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
