[package]
name = "amd-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader 校验层:GPU 加速哈希与完整性校验"

[dependencies]
amd-core = { path = "../amd-core" }
blake3.workspace = true
sha2.workspace = true
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
tracing.workspace = true
wgpu = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:wgpu"]

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
