[package]
name = "amd-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader 引擎层:分片引擎、连接管理"

[dependencies]
amd-core = { path = "../amd-core" }
amd-io = { path = "../amd-io" }
amd-protocol = { path = "../amd-protocol" }
amd-crypto = { path = "../amd-crypto" }
amd-scheduler = { path = "../amd-scheduler" }
tokio.workspace = true
tokio-stream.workspace = true
blake3.workspace = true
bytes.workspace = true
tracing.workspace = true
futures.workspace = true
serde.workspace = true
url.workspace = true
dashmap.workspace = true

[dev-dependencies]
amd-core = { path = "../amd-core", features = ["test-harness"] }
tempfile.workspace = true
tokio-test.workspace = true
proptest.workspace = true
