[package]
name = "amd-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader I/O 层:零拷贝存储引擎"

[dependencies]
amd-core = { path = "../amd-core" }
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
crossbeam-queue.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
