[package]
name = "amd-p2sp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader P2SP 混合下载、DHT、Peer 发现"

[dependencies]
amd-core = { path = "../amd-core" }
amd-protocol = { path = "../amd-protocol" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
tokio-test.workspace = true
