[package]
name = "amd-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader 调度层:智能调度、带宽分配、预测"

[dependencies]
amd-core = { path = "../amd-core" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
