[package]
name = "amd-sniffer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader 嗅探层:浏览器资源拦截与解析"

[dependencies]
amd-core = { path = "../amd-core" }
tokio.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true

[dev-dependencies]
tokio-test.workspace = true
