[package]
name = "amd-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Model Downloader 持久化存储层:嵌入式 KV 存储与断点续传"

[dependencies]
amd-core = { path = "../amd-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
