[package]
name = "qf-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuantumFetch Tauri 应用入口"

[lib]
name = "qf_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "quantumfetch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
qf-core = { path = "../qf-core" }
qf-engine = { path = "../qf-engine" }
qf-scheduler = { path = "../qf-scheduler" }
qf-sniffer = { path = "../qf-sniffer" }
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
reqwest.workspace = true

[dev-dependencies]
serial_test = "3"
