[package]
name = "qf-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuantumFetch 校验层:GPU 加速哈希与完整性校验"

[dependencies]
qf-core = { path = "../qf-core" }
blake3.workspace = true
sha2.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
