[package]
name = "qf-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuantumFetch 引擎层:分片引擎、连接管理"

[dependencies]
qf-core = { path = "../qf-core" }
qf-io = { path = "../qf-io" }
qf-protocol = { path = "../qf-protocol" }
qf-crypto = { path = "../qf-crypto" }
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
futures.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
qf-core = { path = "../qf-core", features = ["test-harness"] }
tempfile.workspace = true
tokio-test.workspace = true
proptest.workspace = true
