[package]
name = "qf-p2sp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuantumFetch P2SP 混合下载、DHT、Peer 发现"

[dependencies]
qf-core = { path = "../qf-core" }
qf-protocol = { path = "../qf-protocol" }
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
