[package]
name = "qf-sniffer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuantumFetch 嗅探层:浏览器资源拦截与解析"

[dependencies]
qf-core = { path = "../qf-core" }
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio-test.workspace = true
