[package]
name = "qf-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuantumFetch 持久化存储层:嵌入式 KV 存储与断点续传"

[dependencies]
qf-core = { path = "../qf-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
