[package]
name = "tachyon-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 协议层:HTTP/HTTPS/QUIC/FTP"

[dependencies]
tachyon-core = { path = "../tachyon-core" }
reqwest.workspace = true
tokio.workspace = true
bytes.workspace = true
url.workspace = true
tracing.workspace = true
futures.workspace = true
dashmap.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rcgen.workspace = true
suppaftp.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
