[package]
name = "tachyon-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 调度层:智能调度、带宽分配、预测"

[dependencies]
tachyon-core = { path = "../tachyon-core" }
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio-test.workspace = true
